--- a/src/analysis/sandbox/model_explore/model_march.Rmd
+++ b/src/analysis/sandbox/model_explore/model_march.Rmd
@@ -74,14 +74,14 @@ theme_report <- theme_minimal() + theme(panel.grid.minor = element_blank())
 
 <br>
 
-# Introduction
+# Introduction {#introduction}
 
 In this report, we present a nationwide water service spatial boundary layer for community water systems and explain the tiered approach taken towards this end. This report builds on a previous technical memorandum (`eda_february.html`) that should be read as prerequisite material to understand the broader context, background, and exploratory data analysis (EDA) that informs the approach taken herein.
 
 The resulting national water service boundary layer is the product of a "Tiered Explicit, Match, and Model" (henceforth, **TEMM**) approach. The TEMM is composed of three hierarchical tiers, arranged by data and model fidelity.
 
 1.  Whenever present, we use *explicit water service boundaries* (labeled data). These are spatial polygon data, typically provided at the state-level.\
-2.  In the absence of explicit water service boundary data, we use a matching algorithm to match PWSIDs by spatial intersection and name to [TIGER place polygons](https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-line-file.html){target="_blank"}. We validate this heuristic approach on explicit water service boundaries[^1], and find favorable results consistent with independent validation of the approach by [Patterson et al. (2019)](https://nicholasinstitute.duke.edu/publications/sensitivity-analysis-using-municipal-boundaries-proxy-service-area-boundaries-when){target="_blank"}.\
+2.  In the absence of explicit water service boundary data, we use a matching algorithm to match PWSIDs by spatial intersection and name to [TIGER place polygons](https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-line-file.html){target="_blank"}. We validate this heuristic approach on explicit water service boundaries[^1], and find favorable results consistent with findings by [Patterson et al. (2019)](https://nicholasinstitute.duke.edu/publications/sensitivity-analysis-using-municipal-boundaries-proxy-service-area-boundaries-when){target="_blank"}, who showed that Census TIGER Places generally agree with municipal boundaries.\
 3.  Finally, in the absence of an explicit water service boundary (Tier 1) or a TIGER place polygon match (Tier 2), a statistical model trained on explicit water service boundary data (Tier 1) is used to estimate a reasonable radius at provided PWSID centroids, notwithstanding centroid accuracy issues that remain intractable at this point in time (centroid accuracy is discussed in the [Limitations](#limitations) and [Recommendations](#recommendations) sections).
 
 [^1]: In a previous report (`eda_february.html`,"*Section* *6 TIGER proxy polygon appropriateness*"), we show that matching PWSID to TIGER places is highly accurate: matched TIGER place polygons intersected explicit water service boundary polygons 93.16% of the time. In this report, we add more states, modify the matching algorithm, and further quantify this boolean (TRUE/FALSE) spatial intersection in terms of "percent overlap". Thus, this older metric should be disregarded in light of new developments described herein.
@@ -151,13 +151,10 @@ d <- read_csv(path(staging_path, "matched_output_clean.csv")) %>%
       has_labeled_bound == FALSE & !is.na(tiger_match_geoid) ~ "Tier 2",
       has_labeled_bound == FALSE & is.na(tiger_match_geoid)  ~ "Tier 3"
     )
-  ) %>% 
-  # filter to CWS and assume each connection must serve at least 1 person
-  # this drop 267 rows (0.5% of data)
-  filter(service_connections_count >= n_max,
-         population_served_count   >= n_max) %>% 
-  # remove 834 rows (1.5% of data) not in contiguous US, mostly Puerto Rico
-  filter(primacy_agency_code %in% c(state.abb, "DC"))
+  ) 
+
+# total water system count
+nrow_d <- nrow(d)
 
 # popultion served by all water systems
 pop_total <- sum(d$population_served_count)
@@ -175,13 +172,15 @@ The following outline reflects a summary of key findings, followed by a descript
 
 ***Key Results***
 
--   A nationwide water service boundary layer is provided for `r format_bign(nrow(d))` community water systems covering a total population of `r format_bign(pop_total)`.\
+-   A nationwide water service boundary layer is provided for `r format_bign(nrow_d)` community water systems[^2] covering a total population of `r format_bign(pop_total)`.\
 -   Population coverage rates per Tier:
     -   *Tier 1*: `r pop$prop[1]`% population covered (`r pop$count[1]` people)\
     -   *Tier 2*: `r pop$prop[2]`% population covered (`r pop$count[2]` people)\
     -   *Tier 3*: `r pop$prop[3]`% population covered (`r pop$count[3]` people)\
 -   The distribution of population in each of these Tiers varies by state (see [state-level coverage map](#Tier_coverage_-_statewide)).\
 -   Favorable uncertainty metrics for Tier 2 and 3 estimates suggest that the TEMM approach provides a reasonable preliminary water service boundary layer.
+
+[^2]: We drop 4,796/49,445 (9.7%) of water systems from this analysis for one of three reasons: (i) they lack a latitude or longitude (and hence we cannot "center" them anywhere), (ii) they fall outside of the 50 US States (e.g., territories like Puerto Rico, Guam, American Samoa), or (iii) their reported population or service connection count is less than 15, which is the minimum service connection count required for a system to be classified as a "community water system".
 
 ***Tier 1: Explicit boundaries***
 
@@ -202,17 +201,17 @@ The following outline reflects a summary of key findings, followed by a descript
 
 ***Combine Tiers***
 
--   After  boundaries from all three Tiers are assimilated, matched, or modeled, they are combined into a final layer, hosted online. 
+-   After boundaries from all three Tiers are assimilated, matched, or modeled, they are combined into a final spatial data layer. As depicted in the figure above, Tier 1 boundaries always supersede Tier 2 boundaries, which always supersede Tier 3 boundaries.
 
 ***Limitations***
 
--   Data and model limitations are discussed
+-   Data and model limitations are discussed, and accompanied by recommendations in the following section.
 
 ***Recommendations***
 
 -   Directions for future work to address the limitations of the TEMM approach are briefly discussed, in particular:
     -   Centroid accuracy and the "pancake problem" may be solved by "re-centering" low-accuracy centroids with city/town spatial databases.\
-    -   Some primacy agency codes report a state that conflicts with the spatial location (i.e., coordinates) of the water system. For example, state A, may have a primacy agency that lists state B. This may be resolved by additional data cleaning. 
+    -   Some primacy agency codes report a state that conflicts with the spatial location (i.e., coordinates) of the water system. For example, state A, may have a primacy agency that lists state B. This may be resolved by additional data cleaning.
 
 ***Contributions***
 
@@ -229,9 +228,9 @@ The key result of this study is a nationwide water service boundary layer. Here 
 
 ## Tier coverage - nationwide
 
-In total, the TEMM data layer represents tap water delivery to `r round(pop_total/1e6, 2)` million people served by `r format_bign(nrow(d))` water systems[^2].
+In total, the TEMM data layer represents tap water delivery to `r round(pop_total/1e6, 2)` million people served by `r format_bign(nrow_d)` water systems[^3].
 
-[^2]: Some water systems were excluded from this data layer. Specifically, 267 water systems were dropped because they had reported service connections or population less than 15, which we categorize as unreasonable given that community water systems are defined as serving at least 15 connections. We also assume that each connection must serve at least one person. Next, we removed 834 water systems associated with US territories; most excluded water systems in this step are found in Puerto Rico.
+[^3]: Some water systems were excluded from this data layer. Specifically, 267 water systems were dropped because they had reported service connections or population less than 15, which we categorize as unreasonable given that community water systems are defined as serving at least 15 connections. We also assume that each connection must serve at least one person. Next, we removed 834 water systems associated with US territories; most excluded water systems in this step are found in Puerto Rico.
 
 About `r str_sub(pop$count, 1, 3)[1]` million people are covered by Tier 1 spatial data -- impressive given that only `r wsb_labeled_clean$state %>% unique() %>% length()` states that provided explicit boundary data. However, this relatively high coverage rate is unsurprising because these states (`r wsb_labeled_clean$state %>% unique() %>% sort() %>% paste(collapse = ", ")`) include notable centers of high-population like CA, TX, and PA.
 
@@ -245,11 +244,12 @@ pop %>%
   kableExtra::kable_styling(full_width = FALSE)
 ```
 
+
 <br>
 
 ## Tier coverage - statewide
 
-Next, we show the proportion of population covered in the _final spatial layer_ per TEMM Tier on a state-by-state basis. Notably:
+Next, we show the proportion of population covered in the *final spatial layer* per TEMM Tier on a state-by-state basis. Notably:
 
 -   When Tier 1 data is present (orange bars below), it tends to cover a majority of the population.\
 -   Tier 2 (blue bars below) covers more population than Tier 3 across all states.\
@@ -311,6 +311,71 @@ dg %>%
 
 <br>
 
+## Tier coverage - system size
+
+Next, for each state, we quantify the proportion of Tiers in each "water size category" according to [EPA guidelines](https://echo.epa.gov/help/drinking-water-dashboard-help#:~:text=Very%20Small%20%C2%A0%20%C2%A0%20%C2%A0%20500,Very%20Large%C2%A0%C2%A0%C2%A0%C2%A0%C2%A0%20%3E100%2C000){target="_blank"}:  
+ 
+| EPA classification | Connection count    |
+|--------------------|---------------------|
+| Very Small         |  500 or less        |
+| Small              |  501 - 3,300        |
+| Medium             |  3,301 - 10,000     |
+| Large              |  10,001 - 100,000   |  
+| Very Large         |  >100,000           |
+
+
+In states that lack Tier 1 boundaries, "Very Small" and "Small" systems tend to have higher proportions of Tier 3 boundaries (grey bars) compared to larger systems. This result is unsurprising because Tier 2 spatial matches hinge on connecting water systems to Census "Places" which tend to be more populous areas. We therefore expect that smaller systems lack a Tier 2 match, and are hence covered by Tier 3 boundaries. 
+
+```{r temm statewide system size}
+# water system size levels in table above
+size_lvls <- c("Very Small", "Small", "Medium", "Large", "Very Large")
+
+# dataframe for barplot geofacet: prop of each each tier per size class
+dg2 <- d %>% 
+  mutate(
+    size_class = case_when(
+      service_connections_count <= 500 ~ "Very Small",
+      service_connections_count > 500 & service_connections_count <= 3300 ~ "Small",
+      service_connections_count > 3300 & service_connections_count <= 10000 ~ "Medium",
+      service_connections_count > 10000 & service_connections_count <= 100000 ~ "Large",
+      service_connections_count > 100000 ~ "Very Large"),
+    size_class = factor(size_class, levels = size_lvls)
+  ) %>% 
+  group_by(primacy_agency_code, size_class) %>%
+  # total count of tiers per state and size class
+  mutate(size_class_count = n()) %>%
+  ungroup() %>% 
+  group_by(primacy_agency_code, size_class, tier) %>% 
+  # calculate count/proportion of tiers per state and size class
+  summarise(
+    count = n(),
+    prop  = count/size_class_count
+  ) %>% 
+  ungroup() %>% 
+  distinct() %>% 
+  # add missing NA values per state code and tier group
+  complete(primacy_agency_code, size_class, tier, 
+           fill = list(count = 0, prop = 0)) 
+
+# geofacet of TEMM tier coverage per state in terms of population proportion
+dg2 %>% 
+  ggplot(aes(size_class, prop, fill = tier)) + 
+  geom_col(position = "stack") + 
+  coord_flip() +
+  scale_fill_carto_d() +
+  scale_y_continuous(breaks = c(0, 1, 0.5), 
+                     labels = c(0, 1, 0.5)) +
+  geofacet::facet_geo(~primacy_agency_code) +
+  labs(x = "", 
+       y = "Proportion of Systems Covered by Each Tier, Split by System Size",
+       fill = "Tier") +
+  theme_minimal(base_size = 6) +
+  theme(panel.grid.minor.x = element_blank(), legend.position = c(0.95, 0.1))
+```
+
+
+<br>
+
 ## National boundary layer
 
 The national water service boundary layer is too large (i.e., around 400 MB) to plot in this interactive report, thus we show a static map below to illustrate the coverage provided by the Tiers 1-3 in the proportions described above, and direct the reader to the TEMM spatial layer in the project repository.
@@ -319,7 +384,7 @@ The national water service boundary layer is too large (i.e., around 400 MB) to 
 include_graphics(here("src/analysis/sandbox/model_explore/etc/temm-nation.png"))
 ```
 
-Here, we zoom into California, Nevada, and Oregon -- three states with high proportions of Tier 1, 2, and 3 spatial boundaries respectively. The Tier 3 circular buffers in this interactive map represent median (50th percentile) model estimates. 
+Here, we zoom into California, Nevada, and Oregon -- three states with high proportions of Tier 1, 2, and 3 spatial boundaries respectively. The Tier 3 circular buffers in this interactive map represent median (50th percentile) model estimates.
 
 ```{r temm zoom ca nv or}
 # plot CA, NV, OR
@@ -502,23 +567,22 @@ tibble(dist = zjd) %>%
 
 The median distance between matching Tier 1 and 2 geometries is `r round(median(zjd), 2)` km and the interquartile range is `r round(quantile(zjd, 0.25), 2)` - `r round(quantile(zjd, 0.75), 2)` km. This suggests that non-spatially intersecting matches are *still very close together* and hence, may be considered adequate preliminary water service boundaries. However, if spatial accuracy close than a few kilometers is paramount, it may be determined that Tier 3 boundaries should be used instead of Tier 2 boundaries. In the absence of a Tier 1 boundary, where Tier 2 boundaries do not spatially intersect the provided ECHO centroid, we may decide at a later date to prefer the Tier 3 boundary, for instance, if the distance between the ECHO centroid and matched Tiger Place exceeds some reasonable threshold.
 
-Results suggest that matching water system spatial boundaries and attributes (i.e., name) to TIGER Places is a valid approach to construct "proxy" water system boundaries. These findings are consistent with independent validation of the approach by [Patterson et al. (2019)](https://nicholasinstitute.duke.edu/publications/sensitivity-analysis-using-municipal-boundaries-proxy-service-area-boundaries-when){target="_blank"}.
+Results suggest that matching water system spatial boundaries and attributes (i.e., name) to TIGER Places is a valid approach to construct "proxy" water system boundaries. These findings are relatively consistent with findings by [Patterson et al. (2019)](https://nicholasinstitute.duke.edu/publications/sensitivity-analysis-using-municipal-boundaries-proxy-service-area-boundaries-when){target="_blank"}, who showed that Census TIGER Places generally agree with municipal boundaries and that these municipal boundaries are valid proxies for water service areas.
 
-Error in the matching algorithm may arise from uncertainty in the *matching* process -- which can be modified in the underlying code -- as well as in the *quality of the underlying data*. Future improvements to the matching algorithm hinge on improvements in these two areas and are discussed in more detail in the [Recommendations](#recommendations) section.
 
 <br>
 
 # Tier 3: *Modeled* boundaries
 
-In the absence of explicit spatial boundaries (Tier 1) and matched TIGER proxy boundaries (Tier 2), we statistically model an estimated boundary (Tier 3). Model specification hinges on the correlation between the radius of Tier 1 convex hulls[^3] (the response variable), and predictors that explain this response, such as service connection count, population served, ownership type and so on.
+In the absence of explicit spatial boundaries (Tier 1) and matched TIGER proxy boundaries (Tier 2), we statistically model an estimated boundary (Tier 3). Model specification hinges on the correlation between the radius of Tier 1 convex hulls[^4] (the response variable), and predictors that explain this response, such as service connection count, population served, ownership type and so on.
 
-[^3]: Labeled radii are calculated from the convex hull area of Tier 1 systems instead of simple water system area because they better represent calculated Tier 3 circular buffers.
+[^4]: Labeled radii are calculated from the convex hull area of Tier 1 systems instead of simple water system area because they better represent calculated Tier 3 circular buffers.
 
 We experimented with 3 different models: random forest, xgboost, and multiple linear regression. These different statistical and machine learning models have different assumptions and performance, which are discussed in the sections that follow.
 
-Ultimately, we selected the multiple linear regression model as our final model because it is computationally efficient, easily interpretable, provides confidence intervals to characterize uncertainty in the modeled boundary (this may be useful depending on the application of the model results), and finally because it avoids overfitting[^4].
+Ultimately, we selected the multiple linear regression model as our final model because it is computationally efficient, easily interpretable, provides confidence intervals to characterize uncertainty in the modeled boundary (this may be useful depending on the application of the model results), and finally because it avoids overfitting[^5].
 
-[^4]: "Overfitting" is the tendency of a statistical or machine learning model to fit well to "seen" training data, but generalize poorly to "unseen" testing data. We need the model to generalize well to unseen water systems. The linear model actually results in the lowest error of the models tested, which may at first seem surprising, but is actually not considering the strong linear relationship between water system radius and service connections. One might expect machine learning approaches like Random Forest and xgboost to outperform the linear model. In fact, they do on training sets, but tend to overfit the training set and not not generalize as well to test sets. Simply put, we to not have enough of the high-dimensional data that machine learning models require to outperform classical approaches like linear regression in the context of this problem.
+[^5]: "Overfitting" is the tendency of a statistical or machine learning model to fit well to "seen" training data, but generalize poorly to "unseen" testing data. We need the model to generalize well to unseen water systems. The linear model actually results in the lowest error of the models tested, which may at first seem surprising, but is actually not considering the strong linear relationship between water system radius and service connections. One might expect machine learning approaches like Random Forest and xgboost to outperform the linear model. In fact, they do on training sets, but tend to overfit the training set and not not generalize as well to test sets. Simply put, we to not have enough of the high-dimensional data that machine learning models require to outperform classical approaches like linear regression in the context of this problem.
 
 <br>
 
@@ -540,9 +604,9 @@ d %>%
   theme_report
 ```
 
-The main drawback of log-transformation is that model coefficient units (e.g., slope of the regression fit) and measures of performance (e.g., RMSE) become difficult to interpret, however there are [methods](https://data.library.virginia.edu/interpreting-log-transformations-in-a-linear-model/){target="_blank"} to handle this interpretation[^5]. The benefits of log-transformation outweigh the drawbacks, thus we log-transform the response variable.
+The main drawback of log-transformation is that model coefficient units (e.g., slope of the regression fit) and measures of performance (e.g., RMSE) become difficult to interpret, however there are [methods](https://data.library.virginia.edu/interpreting-log-transformations-in-a-linear-model/){target="_blank"} to handle this interpretation[^6]. The benefits of log-transformation outweigh the drawbacks, thus we log-transform the response variable.
 
-[^5]: **When only the dependent/response variable is log-transformed**: exponentiate the coefficient, subtract one from this number, and multiply by 100. This gives the percent increase (or decrease) in the response for every one-unit increase in the independent variable. Example: the coefficient is 0.198. (exp(0.198) -- 1) \* 100 = 21.9. For every one-unit increase in the independent variable, our dependent variable increases by about 22%.
+[^6]: **When only the dependent/response variable is log-transformed**: exponentiate the coefficient, subtract one from this number, and multiply by 100. This gives the percent increase (or decrease) in the response for every one-unit increase in the independent variable. Example: the coefficient is 0.198. (exp(0.198) -- 1) \* 100 = 21.9. For every one-unit increase in the independent variable, our dependent variable increases by about 22%.
 
 Moreover, to avoid over-fitting a model on a training set that over-represents the more common low-radius observations, we perform a *stratified random sample* on the response variable. This samples equal proportions of training observations from each of quartiles of the radius distribution, delineated by red dashed lines in the figure below.
 
@@ -568,9 +632,9 @@ d %>%
 
 ### Correlated predictors
 
-Population served and service connections are highly correlated ($r$ $=$ `r round(broom::tidy(cor.test(d$population_served_count, d$service_connections_count))$estimate, 2)`), even across different variables like owner type code. They also both exhibit log-normality, thus, like the response variable, they are log-transformed, which further impacts the interpretation of the regression fit[^6]. Moreover, these two correlated predictors should not be used together in a linear model (i.e., to avoid multicollinearity which reduces the precision of estimated model coefficients), so we will only use one, and try a model that multiplies both predictors to see if combining them improves the model (albeit at the loss of some interpretability). We can however, use both variables in tree-based methods.
+Population served and service connections are highly correlated ($r$ $=$ `r round(broom::tidy(cor.test(d$population_served_count, d$service_connections_count))$estimate, 2)`), even across different variables like owner type code. They also both exhibit log-normality, thus, like the response variable, they are log-transformed, which further impacts the interpretation of the regression fit[^7]. Moreover, these two correlated predictors should not be used together in a linear model (i.e., to avoid multicollinearity which reduces the precision of estimated model coefficients), so we will only use one, and try a model that multiplies both predictors to see if combining them improves the model (albeit at the loss of some interpretability). We can however, use both variables in tree-based methods.
 
-[^6]: **Both dependent/response variable and independent/predictor variable(s) are log-transformed:** Interpret the coefficient as the percent increase in the dependent variable for every 1% increase in the independent variable. Example: the coefficient is 0.198. For every 1% increase in the independent variable, our dependent variable increases by about 0.20%. For x percent increase, calculate 1.x to the power of the coefficient, subtract 1, and multiply by 100. Example: For every 20% increase in the independent variable, our dependent variable increases by about (1.20 ^0.198^ -- 1) \* 100 = 3.7 percent.
+[^7]: **Both dependent/response variable and independent/predictor variable(s) are log-transformed:** Interpret the coefficient as the percent increase in the dependent variable for every 1% increase in the independent variable. Example: the coefficient is 0.198. For every 1% increase in the independent variable, our dependent variable increases by about 0.20%. For x percent increase, calculate 1.x to the power of the coefficient, subtract 1, and multiply by 100. Example: For every 20% increase in the independent variable, our dependent variable increases by about (1.20 ^0.198^ -- 1) \* 100 = 3.7 percent.
 
 ```{r correlation of service connections and pop served}
 d %>% 
@@ -589,6 +653,7 @@ d %>%
 
 ### Interaction effects {#interaction-effects}
 
+Linear regression uses correlations between features of a dataset to predict other features of that dataset. Importantly, the mathematical constraints of regression require that predictors are *independent* from one another, which is to say, they do not share mutual information. If predictors are not independent and interact with one another, this should be specified in the model.
 
 Explain that ind vars are assumed ind and how to spot interactions.
 
@@ -596,9 +661,9 @@ Explain that ind vars are assumed ind and how to spot interactions.
 
 #### Owner type code {#owner-type-code}
 
-Regression slopes differ for the service connections based on **owner type code**. This suggests an interaction term between service connection (and population by correlation) and the owner type. Most systems are owned by local governments (L) or private (P) entities. Moreover, Native American (N) systems are poorly represented -- this should be addressed in future work[^7].
+Regression slopes differ for the service connections based on **owner type code**. This suggests an interaction term between service connection (and population by correlation) and the owner type. Most systems are owned by local governments (L) or private (P) entities. Moreover, Native American (N) systems are poorly represented -- this should be addressed in future work[^8].
 
-[^7]: For modeling purposes and until more data are collected, we re-classify Native American observations ($n$ $=$ 2) into the Public/Private category (M).
+[^8]: For modeling purposes and until more data are collected, we re-classify Native American observations ($n$ $=$ 2) into the Public/Private category (M).
 
 ```{r interaction owner type code}
 d %>% 
@@ -998,9 +1063,9 @@ b <- lm_fit %>%
 
 In the linear model specified above, when both the dependent (response) variable and independent (predictor) variables are log-transformed we interpret these coefficients as the percent increase in the predictor for every 1% increase in the response. In our linear model, only the service connections are log transformed, thus we interpret the `service_connections_count` coefficient (`r round(filter(b, term == "service_connections_count")$estimate, 2)`) as follows: for every a 1% increase in the water system radius, we see a `r round(filter(b, term == "service_connections_count")$estimate, 2)`% increase in service connection count. Thus, a 25%, 50%, and 75% increase in the radius are associated with a `r ceiling((1.25^(filter(b, term == "service_connections_count")$estimate)-1)*100)`%, `r ceiling((1.50^(filter(b, term == "service_connections_count")$estimate)-1)*100)`%, and `r ceiling((1.75^(filter(b, term == "service_connections_count")$estimate)-1)*100)`%\` increase in service connection count, respectively.
 
-It is also worth noting the high prevalence of high p-value coefficients, which suggests that there is little evidence to support an effect from the coefficient[^8]. Most interaction term coefficients fall into this category. By contrast, low p-value coefficients indicate predictors that, when changed, also changes the response variable.
+It is also worth noting the high prevalence of high p-value coefficients, which suggests that there is little evidence to support an effect from the coefficient[^9]. Most interaction term coefficients fall into this category. By contrast, low p-value coefficients indicate predictors that, when changed, also changes the response variable.
 
-[^8]: The p-value in a linear regression tests the null hypothesis that the coefficient has no effect (i.e., coefficient = zero). A low p-value indicates evidence for rejecting the null hypothesis and a high p-value indicates otherwise.
+[^9]: The p-value in a linear regression tests the null hypothesis that the coefficient has no effect (i.e., coefficient = zero). A low p-value indicates evidence for rejecting the null hypothesis and a high p-value indicates otherwise.
 
 ```{r lm coefficients table}
 lm_fit %>% 
@@ -1010,15 +1075,11 @@ lm_fit %>%
   kableExtra::kable_styling(full_width = FALSE)  
 ```
 
-
 <br>
 
 # Combine Tiers
 
-After  boundaries from all three Tiers are assimilated, matched, or modeled, they are combined into a final layer, hosted online. 
-
-This needs more detail. 
-
+After boundaries from all three Tiers are assimilated, matched, or modeled, they are combined into a final spatial data layer. Tier 1 boundaries always supersede Tier 2 boundaries, which always supersede Tier 3 boundaries, as depicted in the [conceptual model in the Introduction](#introduction). The combined TEMM data layer fulfills the motivation of this work, thus we characterize it in the [Key Results](#Key_Results).
 
 <br>
 
@@ -1033,12 +1094,13 @@ No model is without limitations. In this section, we highlight key limitations a
 ```{r pancake problem query}
 # filter for pancake stacks
 pancakes <- d %>% 
-  filter(geometry_quality == "County Centroid" & has_labeled_bound == FALSE & 
+  filter(geometry_quality == "County Centroid" & 
+         has_labeled_bound == FALSE & 
          is.na(tiger_match_geoid)) 
 
 # counties of big pancakes
 big_pancakes <- pancakes %>% 
-  count(county_served, state_code, sort = TRUE) 
+  count(county_served, primacy_agency_code, sort = TRUE) 
 
 # plot
 big_pancake_pwsid <- pancakes %>% 
@@ -1053,23 +1115,30 @@ The "pancake problem" is fundamentally caused by low centroid accuracy (e.g., co
 temm %>% 
   filter(pwsid %in% big_pancake_pwsid) %>% 
   mapview(zcol = "pwsid")
-```
 
-TBD. 
+# calculate count and proportion of pancakes
+nrow_tier3 <- temm %>% filter(tier == "Tier 3") %>% nrow()
 
-```{r count pancakes by centroid accuracy}
-nrow_pancake <- temm %>% filter(tier == "Tier 3") %>% nrow()
-
-temm %>% 
+pancake_count_prop <- temm %>% 
   st_drop_geometry() %>% 
   filter(tier == "Tier 3") %>%
   group_by(geometry_quality) %>% 
   summarise(
     count = n(),
-    percent_tier3 = round((count/nrow_pancake), 3)*100
+    percent_tier3 = round((count/nrow_tier3), 3)*100
   ) %>% 
-  arrange(desc(percent_tier3)) %>% 
-  dt_make()
+  arrange(desc(percent_tier3)) 
+```
+
+Next, we quantify the count and percent of "geometry quality" values for all **Tier 3** spatial boundaries. State centroid "geometry quality" (`r filter(pancake_count_prop, geometry_quality == "State Centroid") %>% pull(percent_tier3)`% of Tier 3 data) is an extreme example of the centroid accuracy issues observed in the dataset. County centroids (`r filter(pancake_count_prop, geometry_quality == "County Centroid") %>% pull(percent_tier3)`% of Tier 3 data) are more resolved than state-level centroids and are the most common scale at which pancake stacks form. Zip code centroids (`r filter(pancake_count_prop, geometry_quality == "Zip Code Centroid") %>% pull(percent_tier3)`% of Tier 3 data) form a large proportion of Tier 3 data, but pancakes at this scale are not as inaccurate as county or state centroids and may be appropriately acceptable error for most analytical purposes. Finally, not all "geometry quality" values are associated with pancakes (for example, "GPS - UNSPECIFIED" points, when plotted, clearly do not form pancake stacks), but these make up a small proportion of Tier 3 data. Most Tier 3 systems suffer from the pancake problem.
+
+```{r count pancakes by centroid accuracy}
+pancake_count_prop %>% 
+  knitr::kable(col.names = c("Geometry Quality", 
+                             "Count", 
+                             "Percent"), 
+               align = rep("l", 3)) %>% 
+  kableExtra::kable_styling(full_width = FALSE)  
 ```
 
 Upstream centroid accuracy issues are beyond the scope of this study, and may be addressed in coordination with federal agencies that produce FRS and ECHO databases. A recommendation for how to address the pancake problem is outlined in the [Recommendations](#recommendations) section below.
@@ -1095,11 +1164,16 @@ d %>%
 
 Beyond a discussion of how the TAMM spatial layer may be used (covered in the next section, [Contributions](#contributions)) we advise the following improvements to the pipeline for creating the TEMM spatial layer. In order of importance:
 
-1.  **Collect additional Tier 1 data.** Explicit boundary data supersedes Tier 2 TIGER proxy matches and Tier 3 modeled water system boundaries. Moreover, additional Tier 1 data improves Tier 3 model predictions by providing more training data for similar systems with missing boundary data or a matching TIGER place. In theory, explicit boundary data for each state across the USA would supersede all Tier 2 and 3 matches and estimates and reduce the pipeline presented herein to a simple data cleaning and assimilation task.\
-2.  **Address the "Pancake Problem".** Low-accuracy centroids challenge the usefulness of the TEMM layer and introduce uncertainty into analyses that depend on these data. We propose an approach to re-center low-accuracy centroids:
-    -   To "spatially dis-aggregate" or "spread out" the pancakes to more reasonable locations, one approach is to relocate low accuracy centroids (i.e., state and county level centroid accuracy) to the centroids of [cities and towns](https://hifld-geoplatform.opendata.arcgis.com/datasets/cities-and-towns-ntad/explore?location=44.247405%2C-113.640330%2C3.84&showTable=true){target="_blank"} that fall within the county/state (depending on the centroid accuracy). Candidate cities for pancakes may be identified via a name match.\
-3.  **Gather labeled boundaries for tribal systems** (and territories if coverage is to be extended to these regions). The lack of data in tribal areas means that these areas are likely to be underrepresented. Coordination should target the collection of Tier 1 data for these systems.
-4.  **Additional data cleaning.** TBD. 
+1. **Data collection and refinement**  
+    - *Collect additional Tier 1 data.* Explicit boundary data supersedes Tier 2 TIGER proxy matches and Tier 3 modeled water system boundaries. Moreover, additional Tier 1 data improves Tier 3 model predictions by providing more training data for similar systems with missing boundary data or a matching TIGER place. In theory, explicit boundary data for each state across the USA would supersede all Tier 2 and 3 matches and estimates and reduce the pipeline presented herein to a simple data cleaning and assimilation task.  
+    - *Gather labeled boundaries for tribal systems.* Tribal systems are currently underrepresented (and territories if coverage is to be extended to these regions). Coordination should target the collection of Tier 1 data for these systems.
+    - *Gather additional data to support technical efforts.* In particular, centroids of [cities and towns](https://hifld-geoplatform.opendata.arcgis.com/datasets/cities-and-towns-ntad/explore?location=44.247405%2C-113.640330%2C3.84&showTable=true){target="_blank"} and municipal boundaries may be used to address the pancake problem and improve the matching algorithm, respectively (described below).
+2. **Data pipeline improvements**  
+    - *Address the "Pancake Problem".* Low-accuracy centroids challenge the usefulness of the TEMM layer and introduce uncertainty into analyses that depend on these data. An approach to re-center low-accuracy centroids (i.e., state and county level centroid accuracy) may be to "spatially dis-aggregate" or "spread out" the pancakes to more reasonable locations, like the centroids of [cities and towns](https://hifld-geoplatform.opendata.arcgis.com/datasets/cities-and-towns-ntad/explore?location=44.247405%2C-113.640330%2C3.84&showTable=true){target="_blank"} that fall within the county/state (depending on the centroid accuracy). Candidate cities for pancakes may be identified via a name match.  
+    - *Improve "Match" and "Model" Tiers 1-2.* Improvements may be made to Tier 2 matching and Tier 3 modeling. Specifically, matching may be improved by using municipal boundaries, which [Patterson et al. (2019)](https://nicholasinstitute.duke.edu/publications/sensitivity-analysis-using-municipal-boundaries-proxy-service-area-boundaries-when){target="_blank"} showed to improve upon Census Place boundaries. 
+    - *Create tools to visualize matches.* A preliminary, minimal interactive Shiny App was developed to visualize candidate matches and support Tier 2 algorithm development. This tool may be expanded to further support iterative review of changes to the algorithm and better understand how match rules determine the end result.  
+    - *Web hosting of the TEMM spatial layer.* The developed TEMM spatial layer will be made available online as a flat file (i.e., `.geojson`, `.shp`, `.csv`) which is accessible to analysts. To make the results accessible to non-technical people and the general public, one option is to stand it up on a server for interactive use in a web browser. 
+
 
 <br>
 
@@ -1107,7 +1181,7 @@ Beyond a discussion of how the TAMM spatial layer may be used (covered in the ne
 
 We developed a "Tiered Explicit, Match, and Model" (**TEMM**) approach to compile a nationwide water system boundary layer via an open source data pipeline. Such a dataset is unprecedented: presently, easily-accessible, machine-readable, and clean water system spatial boundary data -- if available online -- is siloed across states. This work brings together multiple spatial datasets where they exist, and develops algorithms and models to "fill in" missing data where it does not exist.
 
-The spatial layer covers `r format_bign(nrow(d))` community water systems and a total population of `r format_bign(pop_total)`. Most people (`r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million, `r sum(pop$prop[1:2])`% of the population) are covered by a Tier 1 or 2 spatial boundary, which have relatively high accuracy.
+The spatial layer covers `r format_bign(nrow_d)` community water systems and a total population of `r format_bign(pop_total)`. Most people (`r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million, `r sum(pop$prop[1:2])`% of the population) are covered by a Tier 1 or 2 spatial boundary, which have relatively high accuracy.
 
 The data pipeline developed in this work can dynamically regenerate the TEMM spatial layer based on the addition of new Tier 1 explicit boundaries, refinement of the Tier 2 matching algorithm, improvements to the Tier 3 modeled boundaries, and changes to any other data dependencies (e.g., improved centroid location to solve the pancake problem). This pipeline is provided under the [MIT License](https://opensource.org/licenses/MIT){target="_blank"} online at an open source [Github repository](https://github.com/SimpleLab-Inc/wsb){target="*blank"} along with output TAMM spatial layer results in geojson, shapefile, and csv format. Contributor guidelines are available on Github, and detail the processes by which contributions may be made to the project.
 
